--- a/src/components/landing/Globe.module.css
+++ b/src/components/landing/Globe.module.css
@@ -112,7 +112,7 @@
     margin-left: 0;
     margin-right: 0;
     max-width: 100%;
-    text-align: left;
+    text-align: center;
   }
 
   .loader {
