--- a/src/components/landing/BadgeCloud.module.css
+++ b/src/components/landing/BadgeCloud.module.css
@@ -226,10 +226,29 @@
 @media (max-width: 768px) {
   .badgeCloudSection {
     padding: var(--section-padding-y-mobile) var(--space-4) var(--space-12);
+    padding-left: var(--space-4);
+    padding-right: var(--space-4);
   }
 
   .contentWrapper {
     font-size: var(--text-3xl);
+    text-align: center;
+    width: 100%;
+    max-width: 100%;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
+  }
+
+  .lede {
+    text-align: center;
+    max-width: 100%;
+    display: block;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
 
   .badge {
