--- a/src/components/landing/Globe.module.css
+++ b/src/components/landing/Globe.module.css
@@ -7,6 +7,9 @@
   margin-top: -25vh;
   padding-top: 30vh;
   z-index: 10;
+  /* OPTIMIZATION L: Skip rendering until section is near viewport */
+  content-visibility: auto;
+  contain-intrinsic-size: auto 140vh;
 }
 
 .globeContainer {
