--- a/src/components/FullScreenMenu/FullScreenMenu.module.css
+++ b/src/components/FullScreenMenu/FullScreenMenu.module.css
@@ -95,3 +95,17 @@
 .open .menuContent nav>*:nth-child(4) {
   transition-delay: 0.4s;
 }
+
+.closeButton {
+  position: absolute;
+  z-index: 200;
+  right: calc(var(--space-1) + env(safe-area-inset-right, 0px));
+  top: calc(-8px + env(safe-area-inset-top, 0px));
+}
+
+@media (min-width: 768px) {
+  .closeButton {
+    right: calc(var(--space-6) + env(safe-area-inset-right, 0px));
+    top: env(safe-area-inset-top, 0px);
+  }
+}
